--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VitronicsHub Kenya - Premium Phone Accessories</title>
-   <link rel="stylesheet" href="/styles.css">
-   <link rel="stylesheet" href="/cart.css">
+   <link rel="stylesheet" href="./styles.css">
+   <link rel="stylesheet" href="./cart.css">
     <link rel="stylesheet" href="/cartUI.css">
-    <link rel="stylesheet" href="/humberger.css">
+    <link rel="stylesheet" href="./humberger.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
