--- a/public/product-upload.html
+++ b/public/product-upload.html
@@ -144,7 +144,7 @@
     const token = localStorage.getItem('token');
     
     try {
-        const response = await fetch('/api/products', {
+        const response = await fetch('https://vitronicshub.up.railway.app/api/products', {
             method: 'POST',
             credentials: 'include', 
             body: formData
@@ -175,7 +175,7 @@
         // Fetch and display products
         async function fetchProducts() {
             try {
-                const response = await fetch('/api/products');
+                const response = await fetch('https://vitronicshub.up.railway.app/api/products');
                 const products = await response.json();
                 
                 const productList = document.getElementById('productList');
