--- a/public/index.html
+++ b/public/index.html
@@ -34,8 +34,8 @@
       <a href="#products">Products</a>
       <a href="#deals">Daily Deals</a>
       <a href="#contact">Contact</a>
-      <a href="register.html" id="registerLink">Register</a>
-      <a href="login.html" id="loginLink">Login</a>
+<!--       <a href="register.html" id="registerLink">Register</a>
+      <a href="login.html" id="loginLink">Login</a> -->
       <span class="user-greeting" id="greeting" style="cursor: pointer;" title="Click to logout">
         <i class="fas fa-user" id="userIcon" ></i>
         <span id="username-text">Guest</span>
