--- a/public/index.html
+++ b/public/index.html
@@ -37,12 +37,12 @@
 <!--       <a href="register.html" id="registerLink">Register</a>
       <a href="login.html" id="loginLink">Login</a> -->
       <span class="user-greeting" id="greeting" style="cursor: pointer;" title="Click to logout">
-        <i class="fas fa-user" id="userIcon" ></i>
+<!--         <i class="fas fa-user" id="userIcon" ></i>
         <span id="username-text">Guest</span>
       </span>
       <a href="#" class="cart-icon" id="cartIcon">
         <i class="fas fa-shopping-cart"></i>
-        <span class="cart-count" id="cartCount">0</span>
+        <span class="cart-count" id="cartCount">0</span> -->
       </a>
     </div>
   </div>
