--- a/public/index.html
+++ b/public/index.html
@@ -187,11 +187,12 @@
                 Total: <span id="cartTotal">Ksh 0</span>
             </div>
             
-            <div class="payment-options" id="paymentOptions">
-                <h3>Select Payment Method</h3>
-                
+           <div class="payment-options disabled" id="paymentOptions">
+
+                <!-- <h3>Select Payment Method: </h3> -->
+                <h3>Select Payment Method: Kindly Note this Options are Unavailable, Please place your order via WhatsApp 0703182530</h3>
                 <!-- M-Pesa Option -->
-                <div class="payment-method" id="mpesaOption">
+                <div class="payment-method disabled" id="mpesaOption">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/1/15/M-PESA_LOGO-01.svg" alt="M-Pesa" class="payment-icon">
                     <div>
                         <h4>M-Pesa</h4>
