--- a/public/product-upload.html
+++ b/public/product-upload.html
@@ -110,7 +110,7 @@
             
             <div class="form-group">
                 <label for="image">Product Image</label>
-               <input type="file" id="image" name="image" accept="image/*" multiple required>
+               <input type="file" id="image" name="image" accept="image/*"  required>
                 <img id="preview" alt="Image preview">
             </div>
             
