--- a/public/product-upload.html
+++ b/public/product-upload.html
@@ -109,9 +109,18 @@
             </div>
             
             <div class="form-group">
-                <label for="image">Product Image</label>
+<!--                 <label for="image">Product Image</label>
                <input type="file" id="image" name="image" accept="image/*"  required>
-                <img id="preview" alt="Image preview">
+                <img id="preview" alt="Image preview"> -->
+
+                <label>Take a Photo:
+                  <input type="file" name="image" accept="image/*" capture="environment">
+                </label>
+
+            <label>Choose from Gallery:
+              <input type="file" name="image" accept="image/*,.jpg,.jpeg,.png,.gif">
+                </label>
+
             </div>
             
             <button type="submit">Upload Product</button>
