--- a/public/product-upload.html
+++ b/public/product-upload.html
@@ -113,12 +113,12 @@
                <input type="file" id="image" name="image" accept="image/*"  required>
                 <img id="preview" alt="Image preview"> -->
 
-                <label>Take a Photo:
-                  <input type="file" name="image" accept="image/*" capture="environment">
+               <label for="image">Take Photo</label>
+                  <input type="file"  id="image" name="image" accept="image/*" capture="environment">
                 </label>
 
-            <label>Choose from Gallery:
-              <input type="file" name="image" accept="image/*,.jpg,.jpeg,.png,.gif">
+            <label for="image">Choose from Gallery:
+              <input type="file" id="image" name="image" accept="image/*,.jpg,.jpeg,.png,.gif">
                 </label>
 
             </div>
