--- a/public/product-upload.html
+++ b/public/product-upload.html
@@ -113,13 +113,13 @@
                <input type="file" id="image" name="image" accept="image/*"  required>
                 <img id="preview" alt="Image preview"> -->
 
-               <label for="image">Take Photo</label>
+<!--                <label for="image">Take Photo</label>
                   <input type="file"  id="image" name="image" accept="image/*" capture="environment">
-                </label>
+                <img id="preview" alt="Image preview"> -->
 
             <label for="image">Choose from Gallery:
               <input type="file" id="image" name="image" accept="image/*,.jpg,.jpeg,.png,.gif">
-                </label>
+            <img id="preview" alt="Image preview">
 
             </div>
             
