--- a/public/product-upload.html
+++ b/public/product-upload.html
@@ -117,7 +117,7 @@
                   <input type="file"  id="image" name="image" accept="image/*" capture="environment">
                 <img id="preview" alt="Image preview"> -->
 
-            <label for="image">Choose from Gallery:
+            <label for="image" style="cursor:pointer;">Choose from Gallery:</label>
               <input type="file" id="image" name="image" accept="image/*,.jpg,.jpeg,.png,.gif">
             <img id="preview" alt="Image preview">
 
