--- a/public/product-upload.html
+++ b/public/product-upload.html
@@ -107,12 +107,28 @@ button:hover { background-color: #45a049; }
 
 <script>
 // Image preview
-document.getElementById('image').addEventListener('change', function(e) {
+// document.getElementById('image').addEventListener('change', function(e) {
+//     const preview = document.getElementById('preview');
+//     const file = e.target.files[0];
+//     if (file) {
+//         preview.style.display = 'block';
+//         preview.src = URL.createObjectURL(file);
+//     } else {
+//         preview.style.display = 'none';
+//     }
+// });
+
+    document.getElementById('image').addEventListener('change', function(e) {
     const preview = document.getElementById('preview');
     const file = e.target.files[0];
+    
     if (file) {
-        preview.style.display = 'block';
-        preview.src = URL.createObjectURL(file);
+        const reader = new FileReader();
+        reader.onload = function(event) {
+            preview.src = event.target.result;
+            preview.style.display = 'block';
+        }
+        reader.readAsDataURL(file); // Converts file to base64 URL
     } else {
         preview.style.display = 'none';
     }
