--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
   
   <p>We Accept <strong >M-Pesa</strong> and <strong>Cash on Delivery</strong></p>
   <p>&copy; <span id="year"></span> VitronicsHub Kenya. All rights reserved.</p>
-  <p>Designed by <a href="https://vitro">Vitrronics Technologies</a></p>
+  <p>Designed by <a href="https://https://vitronicstechnologies.vercel.app/">Vitrronics Technologies</a></p>
 </div>
 
 <script>
