--- a/public/index.html
+++ b/public/index.html
@@ -140,46 +140,48 @@
  
     
   <footer class="footer" id="Contact">
-  <!-- Contact Section -->
-  <section class="footer-contact" >
-    <h2>Contact Us</h2>
-    <p>Have questions? Reach out to us!</p>
-    <p><i class="fas fa-phone"></i> +254 703 182 530</p>
-    <p><i class="fas fa-envelope"></i> hello@vitronicshub.co.ke</p>
-    <p><i class="fas fa-map-marker-alt"></i> Nairobi, Kenya</p>
-  </section>
+        <!-- Contact Section -->
+        <section class="footer-contact">
+            <h2>Contact Us</h2>
+            <p>Have questions? Reach out to us!</p>
+            <p><i class="fas fa-phone"></i> +254 703 182 530</p>
+            <p><i class="fas fa-envelope"></i> hello@vitronicshub.co.ke</p>
+            <p><i class="fas fa-map-marker-alt"></i> Nairobi, Kenya</p>
+        </section>
 
-  <!-- Footer Links -->
-  <div class="footer-links">
-    <h3>Quick Links</h3>
-    <a href="#">Home</a>
-    <a href="#">Products</a>
-    <a href="#">About Us</a>
-    <a href="#">Contact</a>
-    <a href="#">Terms</a>
-  </div>
+        <!-- Footer Links -->
+        <div class="footer-links">
+            <h3>Quick Links</h3>
+            <a href="#">Home</a>
+            <a href="#">Products</a>
+            <a href="#">About Us</a>
+            <a href="#">Contact</a>
+            <a href="#">Terms</a>
+        </div>
 
-  <!-- Social Icons -->
-  <div class="footer-social">
-    <h3>Follow Us</h3>
-    <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
-    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-    <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-  
+        <!-- Social Icons -->
+        <div class="footer-social">
+            <h3>Follow Us</h3>
+            <div class="footer-social-icons">
+                <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
 
+        <!-- Footer Bottom -->
+        <div class="footer-bottom">
+            <div class="payment-methods">
+                <p>We Accept <strong>M-Pesa</strong> and <strong>Cash on Delivery</strong></p>
+            </div>
+            <p>&copy; <span id="year"></span> VitronicsHub Kenya. All rights reserved.</p>
+            <p>Designed by <a href="https://vitronicstechnologies.vercel.app/">Vitronics Technologies</a></p>
+        </div>
+    </footer>
 
-
-<!-- <div class="footer-bottom"> -->
-  
-  <p>We Accept <strong >M-Pesa</strong> and <strong>Cash on Delivery</strong></p>
-  <p>&copy; <span id="year"></span> VitronicsHub Kenya. All rights reserved.</p>
-  <p>Designed by <a href="https://https://vitronicstechnologies.vercel.app/">Vitrronics Technologies</a></p>
-</div>
-
-<script>
-  document.getElementById("year").textContent = new Date().getFullYear();
-</script>
-</footer>
+    <script>
+        document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
 
     <a href="https://wa.me/254703182530?text=Hi VitronicsHub, I want to know more about your products" target="_blank" class="whatsapp-btn">
         <i class="fab fa-whatsapp"></i>
