--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
     
  
     
-  <footer class="footer" id="Contact" style="font-size:12px; gap:12px; margin-top:10px>
+  <footer class="footer" id="Contact">
         <!-- Contact Section -->
         <section class="footer-contact">
             <h2>Contact Us</h2>
@@ -150,7 +150,7 @@
         </section>
 
         <!-- Footer Links -->
-        <div class="footer-links"  style="font-size:12px; gap:12px;>
+        <div class="footer-links" >
             <h3>Quick Links</h3>
             <a href="#">Home</a>
             <a href="#">Products</a>
@@ -163,9 +163,9 @@
         <div class="footer-social">
             <h3>Follow Us</h3>
             <div class="footer-social-icons">
-                <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+<!--                 <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                 <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a> -->
                   <div class="footer-bottom">
             <div class="payment-methods">
                 <p>We Accept <strong>M-Pesa</strong> and <strong>Cash on Delivery</strong></p>
