--- a/public/index.html
+++ b/public/index.html
@@ -163,9 +163,10 @@
         <div class="footer-social">
             <h3>Follow Us</h3>
             <div class="footer-social-icons">
-<!--                 <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
+                <a href="#" aria-label="Facebook"><i class="fab fa-facebook"></i></a>
                 <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a> -->
+                <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            </div>
                   <div class="footer-bottom">
             <div class="payment-methods">
                 <p>We Accept <strong>M-Pesa</strong> and <strong>Cash on Delivery</strong></p>
